# EtherCAT_master

./: CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.local.json
apps/ethercat_gui/: CMakeLists.txt  ethercat_gui.aps  ethercat_gui.c  ethercat_gui.rc  resource.h
apps/lms_master/: CMakeLists.txt  lms_master.c
cmake/: AddENI.cmake  Windows.cmake
common/: ecat_protocol.h
config/: lms_bosch_sample.csv
docs/: DLL_SDK_API.md  LINUX_RT_BACKEND.md  PHASED_MOTION_ROADMAP.md  PORTABLE_BUILD.md  WINDOWS_VSCODE_SETUP.md  WMX3_BENCHMARK_AND_LMS_ROADMAP.md
ethercat_dll/: CMakeLists.txt
ethercat_dll/include/: ethercat_master.h
ethercat_dll/src/: ethercat_dll.rc  ethercat_master.c
ethercat_dll/test/: ethercat_dll_test.c
linux_rt/ethercat_rt_core/: CMakeLists.txt  README.md
linux_rt/ethercat_rt_core/include/: motion_cia402.h
linux_rt/ethercat_rt_core/src/: ethercat_rt_core.c  igh_lts_backend_server.c  igh_lts_monitor.c  motion_cia402.c
linux_rt/ethercat_rt_core/test/: motion_cia402_test.c
rtx64/ethercat_rt_master/: CMakeLists.txt  README.md
rtx64/ethercat_rt_master/include/: ecat_rt_ipc.h
rtx64/ethercat_rt_master/src/: ethercat_rt_master.c
scripts/: build_vs2022.bat  build_vs2022.ps1
